syntax = "proto3";
package zetachain.zetacore.zetacore;

// this line is used by starport scaffolding # genesis/proto/import
import "zetacore/tss_voter.proto";
import "zetacore/tss.proto";
import "zetacore/in_tx.proto";
import "zetacore/tx_list.proto";
import "zetacore/gas_balance.proto";
import "zetacore/gas_price.proto";
import "zetacore/chain_nonces.proto";
import "zetacore/last_block_height.proto";
import "zetacore/receive.proto";
import "zetacore/send.proto";
import "zetacore/node_account.proto";

option go_package = "github.com/zeta-chain/zetacore/x/zetacore/types";

// GenesisState defines the metacore module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
		repeated TSSVoter tSSVoterList = 11; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated TSS tSSList = 10; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated InTx inTxList = 9; // this line is used by starport scaffolding # genesis/proto/stateField
		TxList txList = 8; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated GasBalance gasBalanceList = 7; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated GasPrice gasPriceList = 6; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated ChainNonces chainNoncesList = 5; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated LastBlockHeight lastBlockHeightList = 4; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated Send sendList = 1; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated Receive receiveList = 2; // this line is used by starport scaffolding # genesis/proto/stateField
		repeated NodeAccount nodeAccountList = 3; // this line is used by starport scaffolding # genesis/proto/stateField
    // this line is used by starport scaffolding # ibc/genesis/proto
}
